--- a/gpu_cuda_nvcc.ipynb
+++ b/gpu_cuda_nvcc.ipynb
@@ -97,10 +97,62 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33e93e87",
+   "id": "546d1ab4",
    "metadata": {},
    "source": [
     "## cuda 版本及多版本安装"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bfcc100",
+   "metadata": {},
+   "source": [
+    "### 12.2 安装 on ubuntu22.02"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b41a0f4",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-ubuntu2204.pin \n",
+    "sudo mv cuda-ubuntu2204.pin /etc/apt/preferences.d/cuda-repository-pin-600 \n",
+    "wget https://developer.download.nvidia.com/compute/cuda/12.2.0/local_installers/cuda-repo-ubuntu2204-12-2-local_12.2.0-535.54.03-1_amd64.deb \n",
+    "sudo dpkg -i cuda-repo-ubuntu2204-12-2-local_12.2.0-535.54.03-1_amd64.deb \n",
+    "\n",
+    "# 这一条命令，可参考上一条命令执行的提示进行；\n",
+    "sudo cp /var/cuda-repo-ubuntu2204-12-2-local/cuda-*-keyring.gpg /usr/share/keyrings/ \n",
+    "\n",
+    "sudo apt-get update \n",
+    "sudo apt-get -y install cuda\n",
+    "```\n",
+    "- https://zhuanlan.zhihu.com/p/646962555"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b7f70c4",
+   "metadata": {},
+   "source": [
+    "### 多版本共存及切换"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40ab479e",
+   "metadata": {},
+   "source": [
+    "- 通过 `.zshrc` 的 3 个环境变量来调控\n",
+    "    \n",
+    "    - `nvcc` 即在 `CUDA_HOME/bin`下；\n",
+    "\n",
+    "```\n",
+    "export CUDA_HOME=/usr/local/cuda-12.2 \n",
+    "export PATH=/usr/local/cuda-12.2/bin:$PATH \n",
+    "export LD_LIBRARY_PATH=/usr/local/cuda-12.2/lib64:$LD_LIBRARY_PATH\n",
+    "```\n"
    ]
   },
   {
@@ -164,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58885d5a",
+   "id": "44742135",
    "metadata": {},
    "source": [
     "## nvcc"
@@ -173,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "343ce55f",
+   "id": "e38bcc30",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-26T14:27:59.654492Z",
