--- a/gpu_cuda_nvcc.ipynb
+++ b/gpu_cuda_nvcc.ipynb
@@ -157,6 +157,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b52bbc4",
+   "metadata": {},
+   "source": [
+    "## torch 重装"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "388a00bd",
+   "metadata": {},
+   "source": [
+    "- `conda install pytorch torchvision torchaudio pytorch-cuda=12.1 -c pytorch -c nvidia`\n",
+    "    - https://pytorch.org/\n",
+    "    - https://pytorch.org/get-started/previous-versions/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3021621b",
    "metadata": {},
    "source": [
