--- a/vim.ipynb
+++ b/vim.ipynb
@@ -22,8 +22,10 @@
    "id": "25d45139",
    "metadata": {},
    "source": [
-    "- dd: 删除行\n",
-    "- u: undo"
+    "- `dd`: 删除行\n",
+    "- `u`: undo\n",
+    "- `yy`：拷贝当前行，`p`：并拷贝（插入）到当前行后一行；\n",
+    "    - `p`: paste"
    ]
   }
  ],
@@ -43,7 +45,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
