--- a/huggingface_transformers_环境.ipynb
+++ b/huggingface_transformers_环境.ipynb
@@ -147,6 +147,24 @@
     "        ...\n",
     "    ```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1348a216",
+   "metadata": {},
+   "source": [
+    "## deepspeed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0e5cddf",
+   "metadata": {},
+   "source": [
+    "- `Installed CUDA version 12.1 does not match the version torch was compiled with 11.8`\n",
+    "    - https://github.com/microsoft/DeepSpeed/issues/3223\n",
+    "    - 注释掉相关抛异常代码即可；"
+   ]
   }
  ],
  "metadata": {
