--- a/网卡与网络.ipynb
+++ b/网卡与网络.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d51cac21",
+   "metadata": {},
+   "source": [
+    "- 注意 google.com 与 google.com.hk 是不同的域名"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "329874b5",
    "metadata": {},
    "source": [
@@ -19,18 +27,50 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04951ca9",
+   "id": "1969e559",
    "metadata": {},
    "source": [
-    "## basics"
+    "## IP"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ac5b45cb",
+   "id": "b323687e",
    "metadata": {},
    "source": [
-    "- 注意 google.com 与 google.com.hk 是不同的域名"
+    "### dhcp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4aedd957",
+   "metadata": {},
+   "source": [
+    "- ip地址如何获取\n",
+    "    - 手动设置：ip地址，子网掩码，默认网关；\n",
+    "- 通过 dhcp 协议\n",
+    "    - （动态）获取 ip 地址\n",
+    "    - 保证不冲突\n",
+    "- 家庭组网\n",
+    "    - 家庭中的 dhcp 服务器就是路由器；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7646548a",
+   "metadata": {},
+   "source": [
+    "### 以太网与wlan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ea82e1b",
+   "metadata": {},
+   "source": [
+    "- 以太网：Ethernet\n",
+    "    - eth1/eth2：传统的以太网编号；\n",
+    "    - eno1/eno2：以太网的新编号；"
    ]
   },
   {
