--- a/科学上网.ipynb
+++ b/科学上网.ipynb
@@ -54,6 +54,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02eaed76",
+   "metadata": {},
+   "source": [
+    "- https://laomiao.site/2022-%E7%A7%91%E5%AD%A6%E4%B8%8A%E7%BD%91-ubuntu-cfw-%E5%AE%9E%E7%8E%B0%E9%80%8F%E6%98%8E%E4%BB%A3%E7%90%86"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bda3408c",
    "metadata": {},
    "source": [
