--- a/开机自启动.ipynb
+++ b/开机自启动.ipynb
@@ -55,6 +55,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "93490d59",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "cd ~/Downloads/0904/Clash\\ for\\ Windows-0.20.21-x64-linux && ./cfw\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bad4649a",
    "metadata": {},
    "source": [
@@ -71,6 +81,14 @@
     "    StartupNotify=false\n",
     "    Terminal=false\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5a88300",
+   "metadata": {},
+   "source": [
+    "`/home/whaow/Downloads/0904/Clash\\ for\\ Windows-0.20.21-x64-linux/cfw`"
    ]
   }
  ],
