--- a/gpu_cuda_nvcc.ipynb
+++ b/gpu_cuda_nvcc.ipynb
@@ -105,6 +105,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "10eb81bb",
+   "metadata": {},
+   "source": [
+    "### drivers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d030ca1c",
+   "metadata": {},
+   "source": [
+    "- 版本理应是越快越好，535 和 525；\n",
+    "- 最好是用 apt 官方源的驱动；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4bfcc100",
    "metadata": {},
    "source": [
