--- a/开机自启动.ipynb
+++ b/开机自启动.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93490d59",
+   "id": "59e73910",
    "metadata": {},
    "source": [
     "```\n",
@@ -85,10 +85,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5a88300",
+   "id": "dcd8cf75",
    "metadata": {},
    "source": [
-    "`/home/whaow/Downloads/0904/Clash\\ for\\ Windows-0.20.21-x64-linux/cfw`"
+    "- 注意文件夹中的空格：\n",
+    "    - `/home/whaow/Downloads/0904/Clash\\ for\\ Windows-0.20.21-x64-linux/cfw`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8dbafbc",
+   "metadata": {},
+   "source": [
+    "### 参考 todesk 的写法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4110b13f",
+   "metadata": {},
+   "source": [
+    "- `vim ~/.config/autostart/todesk.desktop`"
    ]
   }
  ],
