--- a/科学上网.ipynb
+++ b/科学上网.ipynb
@@ -49,7 +49,9 @@
     "- Shadowrocket：俗称小火箭，ios app 上也可下载安装（2.99刀）\n",
     "- clash 配置平台\n",
     "    - 加速猫\n",
-    "    - wgetcloud：https://3jkkvi9afjjln2yjwnbc.wgetcloud.org/user/subscribe"
+    "    - wgetcloud：\n",
+    "        - https://3jkkvi9afjjln2yjwnbc.wgetcloud.org/user/subscribe\n",
+    "        - https://kyp9p97fyfa6juyngbdg.wgetcloud.org/login"
    ]
   },
   {
