--- a/wget_curl.ipynb
+++ b/wget_curl.ipynb
@@ -14,7 +14,10 @@
    "metadata": {},
    "source": [
     "- `curl -L xx.xx.xx -o `\n",
-    "    - `-o`：另存为本地路径及文件名；"
+    "    - `-o`：另存为本地路径及文件名；\n",
+    "- 其他参数\n",
+    "    - `-s, --silent`\n",
+    "    - `-m, --max-time <seconds>`"
    ]
   },
   {
@@ -53,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
