--- a/显卡安装与驱动问题.ipynb
+++ b/显卡安装与驱动问题.ipynb
@@ -11,10 +11,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f18aa45",
+   "id": "d178b9c8",
    "metadata": {},
    "source": [
     "## 驱动安装"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ffd51a6",
+   "metadata": {},
+   "source": [
+    "- software update\n",
+    "- sudo apt install nvidia-driver-xxx\n",
+    "    - `ubuntu-drivers devices`\n",
+    "- 安装包安装：`xx.run`"
    ]
   },
   {
