--- a/组网-网络连接-NAT-内网穿透.ipynb
+++ b/组网-网络连接-NAT-内网穿透.ipynb
@@ -37,6 +37,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94ec1faf",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "sudo zerotier-cli status\n",
+    "sudo zerotier-cli info\n",
+    "sudo zerotier-cli listnetworks\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "06ecaa96",
    "metadata": {},
    "source": [
