--- a/ssh 端口转发与跳板机.ipynb
+++ b/ssh 端口转发与跳板机.ipynb
@@ -28,6 +28,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "358acd67",
+   "metadata": {},
+   "source": [
+    "## ssh 客户端与服务器端"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33399941",
+   "metadata": {},
+   "source": [
+    "- ssh 客户端与服务器端：连接别人与被别人连接\n",
+    "- ssh 客户端是一个软件程序，允许用户安全地连接到远程计算机或服务器。\n",
+    "- ssh 服务器（sshd）是在远程计算机上运行的软件程序，它监听来自SSH客户端的连接请求，并与之建立安全的通信会话。\n",
+    "    - `sudo apt install openssh-server`\n",
+    "    - `sudo ps -e |grep ssh`/`service ssh status`\n",
+    "    - `sudo service ssh start`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eca7ab95",
    "metadata": {},
    "source": [
@@ -178,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
