--- a/组网-网络连接-NAT-内网穿透.ipynb
+++ b/组网-网络连接-NAT-内网穿透.ipynb
@@ -37,14 +37,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94ec1faf",
+   "id": "7f71b4f3",
    "metadata": {},
    "source": [
-    "```\n",
-    "sudo zerotier-cli status\n",
-    "sudo zerotier-cli info\n",
-    "sudo zerotier-cli listnetworks\n",
-    "```"
+    "- 网页端，新建一个 network => 获取 network id 16位；\n",
+    "    - `https://my.zerotier.com/`\n",
+    "- 客户端安装：`curl -s https://install.zerotier.com | sudo bash`\n",
+    "    - 机器A 安装 zerotier，`sudo zerotier-cli join 该networkid`\n",
+    "    - 机器B 安装  zerotier，`sudo zerotier-cli join 该networkid`\n",
+    "- 网页端对两个机器进行auth和name；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16d1ef26",
+   "metadata": {},
+   "source": [
+    "- 基本信息查看\n",
+    "\n",
+    "    ```\n",
+    "    sudo zerotier-cli status\n",
+    "    sudo zerotier-cli info\n",
+    "    sudo zerotier-cli listnetworks\n",
+    "    ```"
    ]
   },
   {
