--- a/显卡安装与驱动问题.ipynb
+++ b/显卡安装与驱动问题.ipynb
@@ -11,7 +11,58 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d178b9c8",
+   "id": "c0133b94",
+   "metadata": {},
+   "source": [
+    "## 显卡是否在槽位（显卡有没有掉）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "82282be9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-26T12:29:53.517774Z",
+     "start_time": "2024-01-26T12:29:53.369120Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18:00.0 VGA compatible controller: NVIDIA Corporation Device 2684 (rev a1)\r\n",
+      "18:00.1 Audio device: NVIDIA Corporation Device 22ba (rev a1)\r\n",
+      "8a:00.0 VGA compatible controller: NVIDIA Corporation Device 2684 (rev a1)\r\n",
+      "8a:00.1 Audio device: NVIDIA Corporation Device 22ba (rev a1)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!lspci | grep -i nvidia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17c073c3",
+   "metadata": {},
+   "source": [
+    "- 一共2个GPU，每个GPU都有一个相应的VGA兼容控制器和一个音频设备。\n",
+    "    - NVIDIA Corporation Device 2684: 4090\n",
+    "        - NVIDIA Corporation Device 2204: 3090\n",
+    "    - https://admin.pci-ids.ucw.cz//mods/PC/10de/\n",
+    "- 18:00.0: PCI 总线（bus）\n",
+    "- rev al: rev，revision，硬件的修订标识符\n",
+    "    - `rev ff`: 有时并不表示传统意义上的硬件版本或修订\n",
+    "        - 硬件故障或通信问题\n",
+    "        - 设备未正确安装或识别\n",
+    "        - 备处于省电模式或未激活状态"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d50320b0",
    "metadata": {},
    "source": [
     "## 驱动安装"
@@ -19,10 +70,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ffd51a6",
+   "id": "010b3b4c",
    "metadata": {},
    "source": [
     "- software update\n",
+    "    - `sudo systemctl disable --now unattended-upgrades`\n",
     "- sudo apt install nvidia-driver-xxx\n",
     "    - `ubuntu-drivers devices`\n",
     "- 安装包安装：`xx.run`"
