--- a/ssh 端口转发与跳板机.ipynb
+++ b/ssh 端口转发与跳板机.ipynb
@@ -44,6 +44,7 @@
     "- ssh 服务器（sshd）是在远程计算机上运行的软件程序，它监听来自SSH客户端的连接请求，并与之建立安全的通信会话。\n",
     "    - `sudo apt install openssh-server`\n",
     "    - `sudo ps -e |grep ssh`/`service ssh status`\n",
+    "        - `sudo systemctl status ssh`\n",
     "    - `sudo service ssh start`"
    ]
   },
