--- a/显卡安装与驱动问题.ipynb
+++ b/显卡安装与驱动问题.ipynb
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60e4e29a",
+   "id": "ae520249",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-26T12:49:01.676488Z",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "520c9d69",
+   "id": "34543b02",
    "metadata": {},
    "source": [
     "## 显卡是否在槽位（显卡有没有掉）"
@@ -34,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "726b4783",
+   "execution_count": 11,
+   "id": "4cafd18b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-26T12:29:53.517774Z",
-     "start_time": "2024-01-26T12:29:53.369120Z"
+     "end_time": "2024-01-26T13:24:18.524144Z",
+     "start_time": "2024-01-26T13:24:18.378206Z"
     }
    },
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da484cca",
+   "id": "18aa4171",
    "metadata": {},
    "source": [
     "- 一共2个GPU，每个GPU都有一个相应的VGA兼容控制器和一个音频设备。\n",
@@ -72,13 +72,77 @@
     "    - `rev ff`: 有时并不表示传统意义上的硬件版本或修订\n",
     "        - 硬件故障或通信问题\n",
     "        - 设备未正确安装或识别\n",
-    "        - 备处于省电模式或未激活状态"
+    "        - 设备处于省电模式或未激活状态"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7dc6bd54",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-26T13:08:59.494652Z",
+     "start_time": "2024-01-26T13:08:59.349766Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00:1f.2 Memory controller: Intel Corporation C620 Series Chipset Family Power Management Controller (rev 0a)\r\n",
+      "51:00.0 Non-Volatile memory controller: Samsung Electronics Co Ltd Device a80c\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "#PCI 是一种计算机总线标准，用于连接主板上的微处理器和外围设备。\n",
+    "!lspci | grep -i memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "41c2ff3c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-26T13:12:20.574664Z",
+     "start_time": "2024-01-26T13:12:19.950268Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: you should run this program as super-user.\n",
+      "  *-namespace:0             \n",
+      "       description: NVMe disk\n",
+      "       physical id: 0\n",
+      "       logical name: hwmon0\n",
+      "  *-namespace:1\n",
+      "       description: NVMe disk\n",
+      "       physical id: 2\n",
+      "       logical name: /dev/ng0n1\n",
+      "  *-namespace:2\n",
+      "       description: NVMe disk\n",
+      "       physical id: 1\n",
+      "       bus info: nvme@0:1\n",
+      "       logical name: /dev/nvme0n1\n",
+      "       configuration: wwid=eui.0025384331418a1d\n",
+      "WARNING: output may be incomplete or inaccurate, you should run this program as super-user.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 硬盘通常通过SATA或NVMe接口连接，而不是PCI。\n",
+    "!lshw -class disk"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7b5719cc",
+   "id": "19dc787a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-26T12:49:14.379166Z",
@@ -108,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "099c406b",
+   "id": "41631286",
    "metadata": {},
    "source": [
     "## 驱动安装"
@@ -116,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bad3642",
+   "id": "cb786d98",
    "metadata": {},
    "source": [
     "- software update\n",
