--- a/显卡安装与驱动问题.ipynb
+++ b/显卡安装与驱动问题.ipynb
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ae520249",
+   "id": "304007fa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-26T12:49:01.676488Z",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34543b02",
+   "id": "5a58313d",
    "metadata": {},
    "source": [
     "## 显卡是否在槽位（显卡有没有掉）"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4cafd18b",
+   "id": "cb039b39",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-26T13:24:18.524144Z",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18aa4171",
+   "id": "711a0889",
    "metadata": {},
    "source": [
     "- 一共2个GPU，每个GPU都有一个相应的VGA兼容控制器和一个音频设备。\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7dc6bd54",
+   "id": "9d3900da",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-26T13:08:59.494652Z",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "41c2ff3c",
+   "id": "698ee78a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-26T13:12:20.574664Z",
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "19dc787a",
+   "id": "7f2822ef",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-26T12:49:14.379166Z",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41631286",
+   "id": "09904e98",
    "metadata": {},
    "source": [
     "## 驱动安装"
@@ -180,14 +180,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb786d98",
+   "id": "f859dd21",
    "metadata": {},
    "source": [
     "- software update\n",
     "    - `sudo systemctl disable --now unattended-upgrades`\n",
     "- sudo apt install nvidia-driver-xxx\n",
     "    - `ubuntu-drivers devices`\n",
-    "- 安装包安装：`xx.run`"
+    "- 安装包安装：`xx.run`\n",
+    "    - https://www.nvidia.com/download/index.aspx#"
    ]
   },
   {
