--- a/服务器管理及运维_磁盘_硬盘_内存.ipynb
+++ b/服务器管理及运维_磁盘_硬盘_内存.ipynb
@@ -40,6 +40,77 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b0b4c72b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-26T13:52:29.556417Z",
+     "start_time": "2024-01-26T13:52:29.425231Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linux whaow 6.5.0-15-generic #15~22.04.1-Ubuntu SMP PREEMPT_DYNAMIC Fri Jan 12 18:54:30 UTC 2 x86_64 x86_64 x86_64 GNU/Linux\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!uname -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "270aa4da",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-26T13:52:51.072111Z",
+     "start_time": "2024-01-26T13:52:50.953359Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x86_64\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# x64\n",
+    "!uname -m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3216feb7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-26T14:00:39.988186Z",
+     "start_time": "2024-01-26T14:00:39.865723Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.5.0-15-generic\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --kernel-release\n",
+    "!uname -r"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "341b6de9",
    "metadata": {},
