--- a/环境变量.ipynb
+++ b/环境变量.ipynb
@@ -2,6 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0495965f",
+   "metadata": {},
+   "source": [
+    "## PATH"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20c2e121",
+   "metadata": {},
+   "source": [
+    "- `~/.zshrc`\n",
+    "- anaconda: `export PATH=\"/home/whaow/anaconda3/bin:$PATH\"`\n",
+    "- 通过冒号拼接和添加\n",
+    "    - `export PATH=$LD_LIBRARY_PATH:$CUDA_HOME:$CUDA_HOME/bin:$PATH`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "654b098b",
    "metadata": {},
    "source": [
