--- a/服务器管理及运维_磁盘_硬盘_内存.ipynb
+++ b/服务器管理及运维_磁盘_硬盘_内存.ipynb
@@ -112,6 +112,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b7cef99b",
+   "metadata": {},
+   "source": [
+    "## BMC 管理"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2836ec71",
+   "metadata": {},
+   "source": [
+    "- https://blog.csdn.net/Neutionwei/article/details/109875556\n",
+    "- 基板管理控制器（Baseboard Manager Controller，简称BMC）。\n",
+    "- 控制 CPU 风扇转速；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "341b6de9",
    "metadata": {},
    "source": [
