--- a/开机自启动及系统级别管理.ipynb
+++ b/开机自启动及系统级别管理.ipynb
@@ -47,6 +47,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f3d0aad4",
+   "metadata": {},
+   "source": [
+    "## telinit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ff47615",
+   "metadata": {},
+   "source": [
+    "- `telinit - Change SysV runlevel`\n",
+    "    - 0: Shutdown\n",
+    "    - 1: Single-user mode\n",
+    "    - 2: Multi-user mode without networking (rarely used)\n",
+    "    - 3: Full multi-user mode (text-based)\n",
+    "    - 4: Undefined/Customizable\n",
+    "    - 5: Full multi-user mode with graphical user interface (GUI)\n",
+    "    - 6: Reboot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2c6ccbd8",
    "metadata": {},
    "source": [
