--- a/显卡安装与驱动问题.ipynb
+++ b/显卡安装与驱动问题.ipynb
@@ -26,6 +26,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "81272244",
+   "metadata": {},
+   "source": [
+    "## 驱动问题"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59ed7aa2",
+   "metadata": {},
+   "source": [
+    "NVIDIA-SMI has failed because it couldn't communicate with the NVIDIA driver. Make sure that the latest NVIDIA driver is installed and running."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5a58313d",
    "metadata": {},
    "source": [
@@ -175,7 +191,7 @@
    "id": "09904e98",
    "metadata": {},
    "source": [
-    "## 驱动安装"
+    "## 驱动安装的几种方式"
    ]
   },
   {
@@ -193,18 +209,61 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c964200",
+   "id": "61c329ca",
    "metadata": {},
    "source": [
-    "## NVIDIA-SMI has failed because it couldn't communicate with the NVIDIA driver. Make sure that the latest NVIDIA driver is installed and running."
+    "## 命令行安装"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a1c02a58",
+   "id": "8d6dcbcc",
    "metadata": {},
    "source": [
-    "- 运行 `nvidia-smi` 命令时报错；"
+    "```\n",
+    "$ which nvidia-detector\n",
+    "$ nvidia-detector\n",
+    "$ sudo apt install nvidia-driver-545\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28493bd4",
+   "metadata": {},
+   "source": [
+    "## 安装包安装"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05f8f3d2",
+   "metadata": {},
+   "source": [
+    "- 屏蔽开源驱动nouveau\n",
+    "    - `sudo vim /etc/modprobe.d/blacklist.conf`\n",
+    "\n",
+    "    ```\n",
+    "    blacklist nouveau\n",
+    "    options nouveau modeset=0\n",
+    "    ```\n",
+    "\n",
+    "- 保存再终端更新内核命令\n",
+    "\n",
+    "    ```\n",
+    "    sudo update-initramfs -u\n",
+    "\n",
+    "    sudo apt update\n",
+    "    sudo apt install gcc g++ make\n",
+    "    ```\n",
+    "- 重启电脑\n",
+    "- 先按Ctrl + Alt + F3到控制台，关闭当前图形环境\n",
+    "    - `sudo telinit 3`: 切换runlevel；\n",
+    "    \n",
+    "- 下载驱动：`https://www.nvidia.com/download/index.aspx#`\n",
+    "- `sudo chmod a+x NVIDIA-Linux-x86_64-xxx.run`\n",
+    "- `sudo sh NVIDIA-Linux-x86_64-xxx.run -no-opengl-files`\n",
+    "- 最后重新启动图形环境"
    ]
   }
  ],
