--- a/ubuntu/操作系统软硬件架构.ipynb
+++ b/ubuntu/操作系统软硬件架构.ipynb
@@ -1,6 +1,103 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ee5b72a2",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-28T12:18:46.034896Z",
+     "start_time": "2024-01-28T12:18:45.914981Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linux version 6.5.0-14-generic (buildd@lcy02-amd64-110) (x86_64-linux-gnu-gcc-12 (Ubuntu 12.3.0-1ubuntu1~22.04) 12.3.0, GNU ld (GNU Binutils for Ubuntu) 2.38) #14~22.04.1-Ubuntu SMP PREEMPT_DYNAMIC Mon Nov 20 18:15:30 UTC 2\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# amd64 => x64\n",
+    "!cat /proc/version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2a7e6ede",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-28T12:17:11.369105Z",
+     "start_time": "2024-01-28T12:17:11.179426Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No LSB modules are available.\r\n",
+      "Distributor ID:\tUbuntu\r\n",
+      "Description:\tUbuntu 22.04.3 LTS\r\n",
+      "Release:\t22.04\r\n",
+      "Codename:\tjammy\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!lsb_release -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "64ad4042",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-28T12:19:10.672999Z",
+     "start_time": "2024-01-28T12:19:10.548296Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "amd64\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!dpkg --print-architecture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "de879dc7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-28T12:19:21.441745Z",
+     "start_time": "2024-01-28T12:19:21.299236Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x86_64\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!arch"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c40612fb",
    "metadata": {},
