--- a/ubuntu/操作系统软硬件架构.ipynb
+++ b/ubuntu/操作系统软硬件架构.ipynb
@@ -26,33 +26,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2a7e6ede",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-28T12:17:11.369105Z",
-     "start_time": "2024-01-28T12:17:11.179426Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No LSB modules are available.\r\n",
-      "Distributor ID:\tUbuntu\r\n",
-      "Description:\tUbuntu 22.04.3 LTS\r\n",
-      "Release:\t22.04\r\n",
-      "Codename:\tjammy\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!lsb_release -a"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "64ad4042",
    "metadata": {
@@ -126,6 +99,54 @@
     "\n",
     "- 两者其实也在互相渗透\n",
     "    - 苹果的 m1/m2 芯片，也都是 arm 架构；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee20f099",
+   "metadata": {},
+   "source": [
+    "## ubuntu os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "909a1690",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-28T12:27:06.434780Z",
+     "start_time": "2024-01-28T12:27:06.246329Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No LSB modules are available.\r\n",
+      "Distributor ID:\tUbuntu\r\n",
+      "Description:\tUbuntu 22.04.3 LTS\r\n",
+      "Release:\t22.04\r\n",
+      "Codename:\tjammy\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!lsb_release -a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1981fc1",
+   "metadata": {},
+   "source": [
+    "| version | codename |\n",
+    "|---------|----------|\n",
+    "| 22.04   | jammy    |\n",
+    "| 20.04   | focal    |\n",
+    "| 19.04   | disco    |\n",
+    "| 18.04   | bionic   |"
    ]
   }
  ],
