--- a/A100/A100_开箱.ipynb
+++ b/A100/A100_开箱.ipynb
@@ -9,6 +9,24 @@
     "    - https://infohub.delltechnologies.com/static/media/client/7phukh/DAM_d6ac0280-3398-47e3-8ad8-075751746a0b.pdf\n",
     "    - https://nigelcannings.medium.com/unlocking-maximum-inference-capability-a-deep-dive-into-llama2-70b-on-an-80gb-a100-gpu-2ab1158d6b0b"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d35ee7a",
+   "metadata": {},
+   "source": [
+    "## gpus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "def72304",
+   "metadata": {},
+   "source": [
+    "- `nvidia-smi`\n",
+    "- `nvidia-smi topo -p2p p`\n",
+    "- `nvidia-smi topo -m`"
+   ]
   }
  ],
  "metadata": {
