--- a/ubuntu/操作系统软硬件架构.ipynb
+++ b/ubuntu/操作系统软硬件架构.ipynb
@@ -71,6 +71,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cc9aef8d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-28T12:43:06.710928Z",
+     "start_time": "2024-01-28T12:43:06.589141Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x86_64\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!uname -m"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c40612fb",
    "metadata": {},
@@ -141,6 +164,8 @@
    "id": "c1981fc1",
    "metadata": {},
    "source": [
+    "- codename:\n",
+    "\n",
     "| version | codename |\n",
     "|---------|----------|\n",
     "| 22.04   | jammy    |\n",
