--- a/ubuntu/ubuntu_装机必备.ipynb
+++ b/ubuntu/ubuntu_装机必备.ipynb
@@ -2,42 +2,48 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e26828d4",
+   "id": "98af5d3b",
    "metadata": {},
    "source": [
-    "## curl"
+    "- clash for windows"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "17fb5398",
+   "id": "0ed613aa",
    "metadata": {},
    "source": [
-    "- `curl -L xx.xx.xx -o `\n",
-    "    - `-o`：另存为本地路径及文件名；\n",
-    "    - `-O`: The -O (uppercase \"o\") option tells curl to save the file with its original filename.\n",
-    "- 其他参数\n",
-    "    - `-s, --silent`\n",
-    "    - `-m, --max-time <seconds>`"
+    "## anaconda python"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1b06ea11",
+   "id": "0332d93e",
    "metadata": {},
    "source": [
-    "## wget"
+    "`sudo apt install libgl1-mesa-glx libegl1-mesa libxrandr2 libxrandr2 libxss1 libxcursor1 libxcomposite1 libasound2 libxi6 libxtst6`"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ca45fb04",
+   "id": "f42b33d7",
    "metadata": {},
    "source": [
-    "- 参数\n",
-    "    - `-P`：`wget https://karpathy.ai/llama2c/model.bin -P out`\n",
-    "        - -P prefix\n",
-    "        - `--directory-prefix=prefix`"
+    "- `curl -O https://repo.anaconda.com/archive/Anaconda3-<INSTALLER_VERSION>-Linux-x86_64.sh`\n",
+    "- `bash ~/Downloads/Anaconda3-<INSTALLER_VERSION>-Linux-x86_64.sh`\n",
+    "    - sudo 时会默认安装在 `/root/anacoda3`，否则安装在 `~/anaconda3`\n",
+    "    - `conda init`\n",
+    "        - `conda config --set auto_activate_base false`\n",
+    "        - `conda init --reverse $SHELL`\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ce6de5f",
+   "metadata": {},
+   "source": [
+    "## zsh"
    ]
   }
  ],
