--- a/ubuntu/环境变量.ipynb
+++ b/ubuntu/环境变量.ipynb
@@ -2,6 +2,38 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "16117d34",
+   "metadata": {},
+   "source": [
+    "- `$SHELL`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0054cffc",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-05T14:51:54.216228Z",
+     "start_time": "2024-02-05T14:51:54.089786Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/zsh\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!echo $SHELL\n",
+    "# /bin/bash"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0495965f",
    "metadata": {},
    "source": [
@@ -121,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
