--- a/科学上网.ipynb
+++ b/科学上网.ipynb
@@ -46,6 +46,10 @@
    "source": [
     "- Clash for windows（CFW）\n",
     "    - 注意 port，有时候会因为服务异常终止导致 7890 的端口号被占用，看下是不是变成了 0\n",
+    "    - download: https://github.com/lantongxue/clash_for_windows_pkg/releases\n",
+    "        - ubuntu:\n",
+    "            - xx.deb: `dpkg -i xx.deb`\n",
+    "            - xx.tar.gz\n",
     "- Shadowrocket：俗称小火箭，ios app 上也可下载安装（2.99刀）\n",
     "- clash 配置平台\n",
     "    - 加速猫\n",
@@ -121,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
