--- a/ubuntu/ubuntu_装机必备.ipynb
+++ b/ubuntu/ubuntu_装机必备.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "98af5d3b",
+   "id": "8a1ae189",
    "metadata": {},
    "source": [
     "- clash for windows"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ed613aa",
+   "id": "dcf4c025",
    "metadata": {},
    "source": [
     "## anaconda python"
@@ -18,7 +18,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0332d93e",
+   "id": "f6f126de",
+   "metadata": {},
+   "source": [
+    "https://docs.anaconda.com/free/anaconda/install/linux/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "decdaaf9",
    "metadata": {},
    "source": [
     "`sudo apt install libgl1-mesa-glx libegl1-mesa libxrandr2 libxrandr2 libxss1 libxcursor1 libxcomposite1 libasound2 libxi6 libxtst6`"
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f42b33d7",
+   "id": "70f9a9a4",
    "metadata": {},
    "source": [
     "- `curl -O https://repo.anaconda.com/archive/Anaconda3-<INSTALLER_VERSION>-Linux-x86_64.sh`\n",
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ce6de5f",
+   "id": "f4c0ac5e",
    "metadata": {},
    "source": [
     "## zsh"
