--- a/nvidia_cuda/gpu_cuda_nvcc.ipynb
+++ b/nvidia_cuda/gpu_cuda_nvcc.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3443f092",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-02T17:04:11.536854Z",
-     "start_time": "2023-06-02T17:04:10.051564Z"
+     "end_time": "2024-02-06T12:23:34.402840Z",
+     "start_time": "2024-02-06T12:23:34.399348Z"
     }
    },
    "outputs": [],
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "1b437587",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-02T17:05:16.566195Z",
-     "start_time": "2023-06-02T17:05:16.557778Z"
+     "end_time": "2024-02-06T12:23:35.378210Z",
+     "start_time": "2024-02-06T12:23:35.372736Z"
     }
    },
    "outputs": [
@@ -31,7 +31,7 @@
      "output_type": "stream",
      "text": [
       "2.0.1\n",
-      "11.7\n"
+      "11.8\n"
      ]
     }
    ],
@@ -101,6 +101,17 @@
    "metadata": {},
    "source": [
     "## cuda 版本及多版本安装"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb5a3fb3",
+   "metadata": {},
+   "source": [
+    "- 三种常见cuda \n",
+    "    - nvidia-smi，安装 nvidia driver 后，使用nvidia-smi查看时，显示的 cuda version；\n",
+    "    - cuda install：安装 cuda toolkit；（系统级别的 cuda）\n",
+    "    - pytorch-cuda=12.1：安装 pytorch cuda 版（环境级别的cuda）；"
    ]
   },
   {
