--- a/科学上网.ipynb
+++ b/科学上网.ipynb
@@ -101,9 +101,9 @@
     }
    },
    "source": [
-    "- 机场、跑道\n",
+    "- 机场、跑道：https://runtufenxiang.com/3546/\n",
     "    - 机场：clash、Shadowrocket\n",
-    "    - 跑道：wget，加速猫\n",
+    "    - 跑道：wgetcloud（原 GaCloud），加速猫\n",
     "- 梯子\n",
     "    - lantern"
    ]
@@ -125,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
