--- a/ubuntu/iterm_zsh.ipynb
+++ b/ubuntu/iterm_zsh.ipynb
@@ -2,57 +2,81 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8a1ae189",
+   "id": "122868bb",
    "metadata": {},
    "source": [
-    "- clash for windows"
+    "- iterm：适用于 mac 终端"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dcf4c025",
-   "metadata": {},
-   "source": [
-    "## anaconda python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6f126de",
-   "metadata": {},
-   "source": [
-    "https://docs.anaconda.com/free/anaconda/install/linux/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "decdaaf9",
-   "metadata": {},
-   "source": [
-    "`sudo apt install libgl1-mesa-glx libegl1-mesa libxrandr2 libxrandr2 libxss1 libxcursor1 libxcomposite1 libasound2 libxi6 libxtst6`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "70f9a9a4",
-   "metadata": {},
-   "source": [
-    "- `curl -O https://repo.anaconda.com/archive/Anaconda3-<INSTALLER_VERSION>-Linux-x86_64.sh`\n",
-    "- `bash ~/Downloads/Anaconda3-<INSTALLER_VERSION>-Linux-x86_64.sh`\n",
-    "    - sudo 时会默认安装在 `/root/anacoda3`，否则安装在 `~/anaconda3`\n",
-    "    - `conda init`\n",
-    "        - `conda config --set auto_activate_base false`\n",
-    "        - `conda init --reverse $SHELL`\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f4c0ac5e",
+   "id": "126708a3",
    "metadata": {},
    "source": [
     "## zsh"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68ce6d62",
+   "metadata": {},
+   "source": [
+    "### install"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76f7d680",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "$ sudo apt install wget git curl vim -y\n",
+    "$ sudo apt install zsh -y\n",
+    "\n",
+    "# Oh My Zsh\n",
+    "$ sh -c \"$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)\"\n",
+    "\n",
+    "\n",
+    "$ chsh -s $(which zsh)\n",
+    "$ zsh\n",
+    "\n",
+    "$ echo $ZSH_CUSTOM\n",
+    "~/.oh-my-zsh/custom\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "551474ab",
+   "metadata": {},
+   "source": [
+    "### 适配之前的 bashrc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e79588e2",
+   "metadata": {},
+   "source": [
+    "- 将之前的 bashrc 中的 `# >>> conda initialize >>> ` 的内容拷贝进 `~/.zshrc`\n",
+    "    - `source ~/.zshrc`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6003162d",
+   "metadata": {},
+   "source": [
+    "### 下载安装插件"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ded24d7a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -71,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
