--- a/ubuntu/ubuntu_操作系统_装机配置.ipynb
+++ b/ubuntu/ubuntu_操作系统_装机配置.ipynb
@@ -68,6 +68,24 @@
     "    - 包管理器会检查是否有任何包缺失或依赖损坏，并尝试通过下载和安装缺失的依赖来修复它们。这个命令不需要你指定一个包来修复；它会自动检查和修复当前系统上已安装包的问题。\n",
     "    - -f: `--fix-broken`，尝试修复系统上任何有损坏依赖的包；"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f867a22a",
+   "metadata": {},
+   "source": [
+    "## 其他开发相关"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65fde316",
+   "metadata": {},
+   "source": [
+    "- zsh\n",
+    "- anaconda\n",
+    "- CFW, clash for windows"
+   ]
   }
  ],
  "metadata": {
