--- a/网卡与网络.ipynb
+++ b/网卡与网络.ipynb
@@ -156,6 +156,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "29ba2bbb",
+   "metadata": {},
+   "source": [
+    "## DNS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6100bb3",
+   "metadata": {},
+   "source": [
+    "- 阿里DNS\n",
+    "    - 233.5.5.5\n",
+    "    - 233.6.6.6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e34c1f2e",
    "metadata": {},
    "source": [
