--- a/ubuntu/iterm_zsh.ipynb
+++ b/ubuntu/iterm_zsh.ipynb
@@ -71,12 +71,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ded24d7a",
+   "cell_type": "markdown",
+   "id": "83636f38",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- 主题 powerlevel 10k\n",
+    "    - `git clone https://github.com/romkatv/powerlevel10k.git $ZSH_CUSTOM/themes/powerlevel10k`\n",
+    "- `git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions`\n",
+    "- `git clone https://github.com/agkozak/zsh-z $ZSH_CUSTOM/plugins/zsh-z`\n",
+    "- `git clone https://github.com/agkozak/zsh-z $ZSH_CUSTOM/plugins/zsh-z`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4192127",
+   "metadata": {},
+   "source": [
+    "- 修改 `~/.zshrc` 已生效\n",
+    "    - `ZSH_THEME=\"powerlevel10k/powerlevel10k\"`\n",
+    "    - `plugins=(git zsh-autosuggestions zsh-syntax-highlighting zsh-z)`"
+   ]
   }
  ],
  "metadata": {
@@ -95,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
