--- a/ubuntu/iterm_zsh.ipynb
+++ b/ubuntu/iterm_zsh.ipynb
@@ -91,6 +91,15 @@
     "    - `ZSH_THEME=\"powerlevel10k/powerlevel10k\"`\n",
     "    - `plugins=(git zsh-autosuggestions zsh-syntax-highlighting zsh-z)`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd96e042",
+   "metadata": {},
+   "source": [
+    "- 配置 powerlevel10k\n",
+    "    - `p10k configure`"
+   ]
   }
  ],
  "metadata": {
