--- a/科学上网.ipynb
+++ b/科学上网.ipynb
@@ -33,6 +33,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "19cc027b",
+   "metadata": {},
+   "source": [
+    "## basics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd00afee",
+   "metadata": {},
+   "source": [
+    "- VPN：Virtual private Network，虚拟专用网络；\n",
+    "    - 用于在公共网络上创建安全、加密的连接；\n",
+    "    - 公司外通过 vpn 连接公司的内网；\n",
+    "- https://github.com/vpncn/vpncn.github.io"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "71174f1f",
    "metadata": {},
    "source": [
@@ -51,11 +70,12 @@
     "            - xx.deb: `dpkg -i xx.deb`\n",
     "            - xx.tar.gz\n",
     "- Shadowrocket：俗称小火箭，ios app 上也可下载安装（2.99刀）\n",
-    "- clash 配置平台\n",
+    "- 机场\n",
     "    - 加速猫\n",
     "    - wgetcloud：\n",
     "        - https://3jkkvi9afjjln2yjwnbc.wgetcloud.org/user/subscribe\n",
-    "        - https://kyp9p97fyfa6juyngbdg.wgetcloud.org/login"
+    "        - https://kyp9p97fyfa6juyngbdg.wgetcloud.org/login\n",
+    "    - flyingbird：https://fbcfaff01.flyingbird.pro/"
    ]
   },
   {
